--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -4,10 +4,9 @@ body {
 
 #Lesson {
 	font-family: 'Cardo', 'Georgia', 'Cambria', serif;
-	font-size: 20px !important;
+	font-size: 16px !important;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 1024px;
 	padding: 10px;
 	width: 100%;
 	height: 100%;
@@ -16,26 +15,46 @@ body {
 
 #Lesson h1 {
 	color: #2e4468;
-	font-size: 48px;
+	font-size: 40px;
 	font-weight: bold;
 	letter-spacing: 1px;
 	font-family: 'Cardo', 'Georgia', 'Cambria', serif;
 }
 
 #Lesson h2 {
-	font-size: 38px;
+	font-size: 32px;
 	color: #c95d0a;
 	font-family: 'Cardo', 'Georgia', 'Cambria', serif;
 }
 
 #Lesson h3 {
-	font-size: 28px;
+	font-size: 24px;
 	color: #bd1e13;
 	font-family: 'Cardo', 'Georgia', 'Cambria', serif;
 }
 
 #Lesson h4 {
-	font-size: 24px;
+	font-size: 22px;
 	color: #bd1e13;
 	font-family: Open Sans;
+}
+
+#Lesson th, td {
+	padding: 10px;
+}
+
+#Lesson ul {
+	list-style-position: outside !important;
+	margin-left: 30px;
+}
+
+.isleImageModal {
+	background: 'cyan';
+	height: 70%;
+	width: 'auto';
+	bottom: 0;
+	left: 0;
+	top: 0;
+	right: 0;
+	margin: 'auto';
 }
