--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -14,6 +14,23 @@ body {
 	display: block;
 }
 
+#Lesson .statusbar {
+	position: absolute;
+	width: 34%;
+	height: 48px;
+	left: 0;
+	right: 0;
+	top: -32px;
+	margin: auto;
+	z-index: 2000;
+	opacity: 0.7;
+	cursor: pointer;
+}
+
+#App #Lesson .statusbar {
+	position: fixed;
+}
+
 #Lesson h1 {
 	color: #2e4468;
 	font-size: 40px;
