--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -17,12 +17,13 @@ body {
 #Lesson .statusbar {
 	position: absolute;
 	width: 34%;
+	min-width: 300px;
 	height: 48px;
 	left: 0;
 	right: 0;
 	top: -32px;
 	margin: auto;
-	z-index: 2000;
+	z-index: 10;
 	opacity: 0.7;
 	cursor: pointer;
 }
