--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -32,6 +32,29 @@ body {
 	white-space: pre-wrap;
 }
 
+#Lesson .chatmessage {
+	white-space: pre-wrap;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+#Lesson .chatuser {
+	color: steelblue;
+	font-weight: 600;
+}
+
+#Lesson .chatexit {
+	float: right;
+	width: 16px;
+	height: 16px; 
+	background: darkgrey; 
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+#Lesson .chatexit:hover {
+	background: lightcoral;
+}
+
 #Lesson .clickable {
 	background: transparent;
 	cursor: pointer;
