--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -2,6 +2,16 @@ body {
 	background-color: #fffff8;
 }
 
+#loading {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(gifs/loading.gif) center no-repeat #fff;
+}
+
 .errorMessage {
 	position: absolute;
 	width: 80%;
